tests/machine/x/fortran/pure_global_fold.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/pure_global_fold.f90:3:3:

    3 |   k = 2
      |   1
Error: Symbol ‘k’ at (1) has no IMPLICIT type

